# srgn_config

./: .gitignore  CMakeLists.txt  README.md
anbui/: README.md  ad_hal.h  ad_obj.c  ad_priv.h  ad_test.c  ad_text.c  ad_ui.c  anbui.c  anbui.h  pl_linux.c
src/: config_registry.c  config_registry.h  config_state.c  config_state.h  device.c  device.h  main.c  uenv.c  uenv.h  ui.c  ui.h
